fix phoneSmall UserProfile page overflow hidden and fontsize

--- a/src/components/UserProfileHeader/UserLinks/UserLinks.module.scss
+++ b/src/components/UserProfileHeader/UserLinks/UserLinks.module.scss
@@ -16,6 +16,7 @@
     @include mixin.phoneSmall {
       overflow-x: auto;
       white-space: nowrap;
+      -webkit-overflow-scrolling: touch;
     }
     @include mixin.phoneLarge {
       padding-left: 30px;
